force-app/main/default/objects/RXP_Case_Subject_Mapping__mdt/RXP_Case_Subject_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>RXP Case Subject Mapping</label>
    <pluralLabel>RXP Case Subject Mappings</pluralLabel>
</CustomObject>