force-app/main/default/objects/RXP_Case_Subject_Mapping__mdt/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <label>Case Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>