force-app/main/default/objects/RXP_Case_Subject_Mapping__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>coursesUCom</fullName>
                <default>true</default>
                <label>Courses U</label>
            </value>
            <value>
                <fullName>magasinUCom</fullName>
                <label>Magasins U</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>