force-app/main/default/objects/RXP_Case_Subject_Mapping__mdt/fields/Ends_With__c.field-meta.xml
<CustomField>
    <fullName>Ends_With__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ends with</label>
    <type>Checkbox</type>
</CustomField>