force-app/main/default/objects/RXP_Case_Subject_Mapping__mdt/fields/Equals__c.field-meta.xml
<CustomField>
    <fullName>Equals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equals</label>
    <type>Checkbox</type>
</CustomField>