force-app/main/default/objects/RXP_Case_Subject_Mapping__mdt/fields/Starts_With__c.field-meta.xml
<CustomField>
    <fullName>Starts_With__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Starts with</label>
    <type>Checkbox</type>
</CustomField>